--- a/demo/package.json
+++ b/demo/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "yarn": "^1.22.21",
     "npm-run-all": "^4.1.5",
     "sass": "^1.70.0",
     "typescript": "^5.3.3"
@@ -17,7 +18,7 @@
     "build": "yarn npm-run-all --parallel build:sass build:tsc",
     "build:sass": "yarn sass src/main/resources/sass:target/classes/static/css",
     "build:tsc": "yarn tsc",
-    "build2": "tyarn sc",
+    "build2": "node_modules/.bin/yarn tsc",
     "build3": "yarn sass src/main/resources/sass:target/classes/static/css"
   }
 }
